progs/tests/force/faulty_call.sy
f :: fn -> int | bool {
    ret 1
}

start :: fn {
    a: int = f!
    a <=> 1
}

// error: #TypeMismatch(Type::Int, _)
